--- a/style.css
+++ b/style.css
@@ -10,27 +10,30 @@
     font-family: 'Red Hat Display', serif;
     font-weight: 500;
 }
+
+
 body{
     background-color: var(--pale-blue);
-    position: relative;
-    max-width: 28em;
-    height: 40vh;
-    margin: auto;
+    display: flex;
+
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .container{
-    position: absolute;
-    
-    max-width: 28em;
-    width: 100%;
-    right: 0;
-    
+    flex: 1;
+    align-self: center;
+    max-width: 350px;
 }
 
 section{
     background-color: var(--very-pale-blue);
     display: flex;
     flex-direction: column;
+    max-height: 80vh;
+    height: 100%;
+    flex-grow: 1;
+    
     border-radius: 0.5rem;
     align-items: center;
     justify-content: center;
@@ -38,15 +41,22 @@ section{
 p{
     padding-left: 3%;
     padding-right: 3%;
+    color: var(--desatured-blue);
+    line-height: 18px;
 }
 .flexbox{
+    flex-grow: 1;
     width: 100%;
-    padding: 3%;
+    position: relative;
     text-align: center;
+}
+.flexbox > h1{
+    font-size: 20px;
+    flex-wrap: wrap;
 }
 
 .flexbox img{
-    position: relative;
+    max-height: 20vh; 
     width: inherit;
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
@@ -56,31 +66,19 @@ p{
     flex-direction: row;
     column-gap: 1em;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
+    padding-left: 12%;
+    padding-right: 12%;
 }
-h1{
-    font-weight: 900;
-}
-h2{
-    display: inline-block;
-    font-weight: 700;
-}
-p{
-    font-weight: 500;
-    text-align: center;
-}
+
 .attribution { 
     text-align: center;
-    width: 300px; 
-    position: absolute;
-    
-    
-    font-size: 11px; 
+    flex: 1;
+    max-height: inherit;
 }
 .attribution a { 
     color: hsl(228, 45%, 44%); 
 }
-
 a:hover{
     cursor: pointer;
     text-align: center;
@@ -96,6 +94,8 @@ button{
 .pay{
     background-color: var(--bright-blue);
     color: var(--very-pale-blue);
+    max-width: 300px;
+    border-radius: 0.5rem;
 }
 
 .pay:hover{
@@ -104,12 +104,26 @@ button{
 }
 
 .cancel{
+    flex: 1;
     font-weight: 700;
     border: 0 px;
     text-decoration: none;
+    margin: 20px;
+    padding-bottom: 15px;
+    padding-top: 10px;
 }
 
 .cancel:hover{
     color: black;
     cursor: pointer;
+}
+h1{
+    font-weight: 900;
+}
+h2{
+    font-weight: 700;
+}
+p{
+    font-weight: 500;
+    text-align: center;
 }
