--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ a:hover{
     cursor: pointer;
     text-align: center;
     text-decoration: none;
+    transition: all 0.3s ease 0s;
 }
 
 button{
@@ -114,6 +115,7 @@ button{
     border: 0 px;
     text-decoration: none;
     margin: 20px;
+    transition: all 0.3s ease 0s;
     color: var(--desatured-blue);
 }
 
