--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
     flex: 1;
     align-self: center;
     max-width: 350px;
-    height: 70vh;
+    min-height: 70vh;
     padding: 10vh;
 }
 
